--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -64,6 +64,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
+<li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
 <li class="circle">growthbook.sdk.java.<a href="GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
 <li class="circle">growthbook.sdk.java.<a href="StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
@@ -101,6 +102,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java">DataType</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureFetchException.FeatureFetchErrorCode.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureFetchException.FeatureFetchErrorCode</a></li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureRefreshStrategy.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureRefreshStrategy</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureResultSource</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java">Operator</a></li>
 </ul>
