--- a/overview-tree.html
+++ b/overview-tree.html
@@ -68,6 +68,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
@@ -105,6 +106,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java">DataType</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureFetchException.FeatureFetchErrorCode.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureFetchException.FeatureFetchErrorCode</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRefreshStrategy.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureRefreshStrategy</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureResultSource</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java">Operator</a></li>
 </ul>
