--- a/index-all.html
+++ b/index-all.html
@@ -412,10 +412,14 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">when the type is an object</div>
 </dd>
+<dt><a href="growthbook/sdk/java/FeatureRefreshCallback.html#onError(java.lang.Throwable)" class="member-name-link">onError(Throwable)</a> - Method in interface growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRefreshCallback.html" title="interface in growthbook.sdk.java">FeatureRefreshCallback</a></dt>
+<dd>
+<div class="block">See <a href="growthbook/sdk/java/GBFeaturesRepository.html#onFeaturesRefresh(growthbook.sdk.java.FeatureRefreshCallback)"><code>GBFeaturesRepository.onFeaturesRefresh(FeatureRefreshCallback)</code></a></div>
+</dd>
 <dt><a href="growthbook/sdk/java/GBFeaturesRepository.html#onFeaturesRefresh(growthbook.sdk.java.FeatureRefreshCallback)" class="member-name-link">onFeaturesRefresh(FeatureRefreshCallback)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" title="class in growthbook.sdk.java">GBFeaturesRepository</a></dt>
 <dd>
 <div class="block">Subscribe to feature refresh events
- This callback is called when the features are successfully refreshed.</div>
+ This callback is called when the features are successfully refreshed or there is an error when refreshing.</div>
 </dd>
 <dt><a href="growthbook/sdk/java/FeatureUsageCallback.html#onFeatureUsage(java.lang.String,growthbook.sdk.java.FeatureResult)" class="member-name-link">onFeatureUsage(String, FeatureResult&lt;ValueType&gt;)</a> - Method in interface growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureUsageCallback.html" title="interface in growthbook.sdk.java">FeatureUsageCallback</a></dt>
 <dd>&nbsp;</dd>
