--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -27,6 +27,7 @@ loadScripts(document, 'script');</script>
 <div class="top-nav" id="navbar-top">
 <div class="skip-nav"><a href="#skip-navbar-top" title="Skip navigation links">Skip navigation links</a></div>
 <ul id="navbar-top-firstrow" class="nav-list" title="Navigation">
+<li><a href="../../../index.html">Overview</a></li>
 <li><a href="package-summary.html">Package</a></li>
 <li>Class</li>
 <li class="nav-bar-cell1-rev">Tree</li>
@@ -48,6 +49,10 @@ loadScripts(document, 'script');</script>
 <main role="main">
 <div class="header">
 <h1 class="title">Hierarchy For Package growthbook.sdk.java</h1>
+<span class="package-hierarchy-label">Package Hierarchies:</span>
+<ul class="horizontal">
+<li><a href="../../../overview-tree.html">All Packages</a></li>
+</ul>
 </div>
 <section class="hierarchy">
 <h2 title="Class Hierarchy">Class Hierarchy</h2>
@@ -56,8 +61,10 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="ExperimentHelper.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentHelper</a></li>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureEvalContext.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvalContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
@@ -65,8 +72,12 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
+<li class="circle">growthbook.sdk.java.<a href="GeneratedStickyBucketAssignmentDocModel.html" class="type-name-link" title="class in growthbook.sdk.java">GeneratedStickyBucketAssignmentDocModel</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
+<li class="circle">growthbook.sdk.java.<a href="HashAttributeAndHashValue.html" class="type-name-link" title="class in growthbook.sdk.java">HashAttributeAndHashValue</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
+<li class="circle">growthbook.sdk.java.<a href="ParentCondition.html" class="type-name-link" title="class in growthbook.sdk.java">ParentCondition</a></li>
+<li class="circle">growthbook.sdk.java.<a href="StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java">StickyBucketVariation</a></li>
 <li class="circle">growthbook.sdk.java.<a href="StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Throwable.html" class="type-name-link external-link" title="class or interface in java.lang">Throwable</a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
