--- a/overview-tree.html
+++ b/overview-tree.html
@@ -27,6 +27,7 @@ loadScripts(document, 'script');</script>
 <div class="top-nav" id="navbar-top">
 <div class="skip-nav"><a href="#skip-navbar-top" title="Skip navigation links">Skip navigation links</a></div>
 <ul id="navbar-top-firstrow" class="nav-list" title="Navigation">
+<li><a href="index.html">Overview</a></li>
 <li>Package</li>
 <li>Class</li>
 <li class="nav-bar-cell1-rev">Tree</li>
@@ -50,7 +51,8 @@ loadScripts(document, 'script');</script>
 <h1 class="title">Hierarchy For All Packages</h1>
 <span class="package-hierarchy-label">Package Hierarchies:</span>
 <ul class="horizontal">
-<li><a href="growthbook/sdk/java/package-tree.html">growthbook.sdk.java</a></li>
+<li><a href="growthbook/sdk/java/package-tree.html">growthbook.sdk.java</a>, </li>
+<li><a href="growthbook/sdk/java/stickyBucketing/package-tree.html">growthbook.sdk.java.stickyBucketing</a></li>
 </ul>
 </div>
 <section class="hierarchy">
@@ -60,8 +62,10 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentHelper.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentHelper</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureEvalContext.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvalContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
@@ -69,8 +73,14 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GeneratedStickyBucketAssignmentDocModel.html" class="type-name-link" title="class in growthbook.sdk.java">GeneratedStickyBucketAssignmentDocModel</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/HashAttributeAndHashValue.html" class="type-name-link" title="class in growthbook.sdk.java">HashAttributeAndHashValue</a></li>
+<li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/InMemoryStickyBucketServiceImpl.html" class="type-name-link" title="class in growthbook.sdk.java.stickyBucketing">InMemoryStickyBucketServiceImpl</a> (implements growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a>)</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ParentCondition.html" class="type-name-link" title="class in growthbook.sdk.java">ParentCondition</a></li>
+<li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.stickyBucketing">StickyAssignmentsDocument</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java">StickyBucketVariation</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Throwable.html" class="type-name-link external-link" title="class or interface in java.lang">Throwable</a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
@@ -94,6 +104,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">ExperimentRunCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRefreshCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureRefreshCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureUsageCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureUsageCallback</a></li>
+<li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" class="type-name-link" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">TrackingCallback</a></li>
 </ul>
 </section>
