--- a/growthbook/sdk/java/ExperimentResult.html
+++ b/growthbook/sdk/java/ExperimentResult.html
@@ -31,6 +31,7 @@ loadScripts(document, 'script');</script>
 <div class="top-nav" id="navbar-top">
 <div class="skip-nav"><a href="#skip-navbar-top" title="Skip navigation links">Skip navigation links</a></div>
 <ul id="navbar-top-firstrow" class="nav-list" title="Navigation">
+<li><a href="../../../index.html">Overview</a></li>
 <li><a href="package-summary.html">Package</a></li>
 <li class="nav-bar-cell1-rev">Class</li>
 <li><a href="package-tree.html">Tree</a></li>
@@ -93,7 +94,7 @@ loadScripts(document, 'script');</script>
 <div class="summary-table two-column-summary">
 <div class="table-header col-first">Constructor</div>
 <div class="table-header col-last">Description</div>
-<div class="col-constructor-name even-row-color"><code><a href="#%3Cinit%3E(ValueType,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean)" class="member-name-link">ExperimentResult</a><wbr>(<a href="ExperimentResult.html" title="type parameter in ExperimentResult">ValueType</a>&nbsp;value,
+<div class="col-constructor-name even-row-color"><code><a href="#%3Cinit%3E(ValueType,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean,java.lang.Boolean)" class="member-name-link">ExperimentResult</a><wbr>(<a href="ExperimentResult.html" title="type parameter in ExperimentResult">ValueType</a>&nbsp;value,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Integer.html" title="class or interface in java.lang" class="external-link">Integer</a>&nbsp;variationId,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;inExperiment,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;hashAttribute,
@@ -103,7 +104,8 @@ loadScripts(document, 'script');</script>
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;key,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;name,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Float.html" title="class or interface in java.lang" class="external-link">Float</a>&nbsp;bucket,
- <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;passThrough)</code></div>
+ <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;passThrough,
+ <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;stickyBucketUsed)</code></div>
 <div class="col-last even-row-color">
 <div class="block">The result of running an <a href="Experiment.html" title="class in growthbook.sdk.java"><code>Experiment</code></a> given a specific <a href="GBContext.html" title="class in growthbook.sdk.java"><code>GBContext</code></a></div>
 </div>
@@ -144,8 +146,8 @@ loadScripts(document, 'script');</script>
 <h2>Constructor Details</h2>
 <ul class="member-list">
 <li>
-<section class="detail" id="&lt;init&gt;(ValueType,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean)">
-<h3 id="&lt;init&gt;(java.lang.Object,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean)">ExperimentResult</h3>
+<section class="detail" id="&lt;init&gt;(ValueType,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean,java.lang.Boolean)">
+<h3 id="&lt;init&gt;(java.lang.Object,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean,java.lang.Boolean)">ExperimentResult</h3>
 <div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="element-name">ExperimentResult</span><wbr><span class="parameters">(@Nullable
  <a href="ExperimentResult.html" title="type parameter in ExperimentResult">ValueType</a>&nbsp;value,
  @Nullable
@@ -165,7 +167,9 @@ loadScripts(document, 'script');</script>
  @Nullable
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Float.html" title="class or interface in java.lang" class="external-link">Float</a>&nbsp;bucket,
  @Nullable
- <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;passThrough)</span></div>
+ <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;passThrough,
+ @Nullable
+ <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;stickyBucketUsed)</span></div>
 <div class="block">The result of running an <a href="Experiment.html" title="class in growthbook.sdk.java"><code>Experiment</code></a> given a specific <a href="GBContext.html" title="class in growthbook.sdk.java"><code>GBContext</code></a></div>
 <dl class="notes">
 <dt>Parameters:</dt>
