--- a/growthbook/sdk/java/FeatureFetchException.html
+++ b/growthbook/sdk/java/FeatureFetchException.html
@@ -27,6 +27,7 @@ loadScripts(document, 'script');</script>
 <div class="top-nav" id="navbar-top">
 <div class="skip-nav"><a href="#skip-navbar-top" title="Skip navigation links">Skip navigation links</a></div>
 <ul id="navbar-top-firstrow" class="nav-list" title="Navigation">
+<li><a href="../../../index.html">Overview</a></li>
 <li><a href="package-summary.html">Package</a></li>
 <li class="nav-bar-cell1-rev">Class</li>
 <li><a href="package-tree.html">Tree</a></li>
@@ -83,14 +84,14 @@ loadScripts(document, 'script');</script>
 <span class="extends-implements">extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" title="class or interface in java.lang" class="external-link">Exception</a></span></div>
 <div class="block">This error is thrown by <a href="GBFeaturesRepository.html" title="class in growthbook.sdk.java"><code>GBFeaturesRepository</code></a>
  You can call getErrorCode() to get an enum of various error types you can handle.
-
+ <p>
  CONFIGURATION_ERROR:
-   - an encryptionKey was provided but the endpoint does not support encryption so decryption fails
-   - no features were found for an unencrypted endpoint
+ - an encryptionKey was provided but the endpoint does not support encryption so decryption fails
+ - no features were found for an unencrypted endpoint
  NO_RESPONSE_ERROR:
-   - there was no response body
+ - there was no response body
  UNKNOWN:
-   - there was an unknown error that occurred when attempting to make the request.</div>
+ - there was an unknown error that occurred when attempting to make the request.</div>
 <dl class="notes">
 <dt>See Also:</dt>
 <dd>
