--- a/help-doc.html
+++ b/help-doc.html
@@ -27,7 +27,8 @@ loadScripts(document, 'script');</script>
 <div class="top-nav" id="navbar-top">
 <div class="skip-nav"><a href="#skip-navbar-top" title="Skip navigation links">Skip navigation links</a></div>
 <ul id="navbar-top-firstrow" class="nav-list" title="Navigation">
-<li><a href="growthbook/sdk/java/package-summary.html">Package</a></li>
+<li><a href="index.html">Overview</a></li>
+<li>Package</li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
@@ -62,6 +63,7 @@ loadScripts(document, 'script');</script>
 </li>
 <li><a href="#help-pages">Kinds of Pages</a>: 
 <ul class="help-subtoc">
+<li><a href="#overview">Overview</a></li>
 <li><a href="#package">Package</a></li>
 <li><a href="#class">Class or Interface</a></li>
 <li><a href="#doc-file">Other Files</a></li>
@@ -93,6 +95,10 @@ Starting from the <a href="index.html">Overview</a> page, you can browse the doc
 <div class="sub-title">
 <h2 id="help-pages">Kinds of Pages</h2>
 The following sections describe the different kinds of pages in this collection.
+<section class="help-section" id="overview">
+<h3>Overview</h3>
+<p>The <a href="index.html">Overview</a> page is the front page of this API document and provides a list of all packages with a summary for each.  This page can also contain an overall description of the set of packages.</p>
+</section>
 <section class="help-section" id="package">
 <h3>Package</h3>
 <p>Each package has a page that contains a list of its classes and interfaces, with a summary for each. These pages may contain the following categories:</p>
